src/objects/Coffee_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>How_manage_pests_diseases_of_yo_coffee__c</fullName>
        <label>How manage pests &amp; diseases of yo coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Spray with chemicals (pesticides/fungicides)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use local technolgoy/cultural means</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use a combination of methods above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical means (e.g. uprooting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_and_when_seedlings_watered__c</fullName>
        <label>How often and when seedlings watered?</label>
        <picklist>
            <picklistValues>
                <fullName>Twice a day (early morning and late evening)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait for rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_is_coffee_desuckering__c</fullName>
        <description>How often is coffee de-suckering done</description>
        <label>How often is coffee de-suckering</label>
        <picklist>
            <picklistValues>
                <fullName>Sevral times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_wld_u_lyk_2_receive_SMS_alerts__c</fullName>
        <description>How often wld u like to receive SMS alerts</description>
        <inlineHelpText>How often would you like to receive the SMS alerts</inlineHelpText>
        <label>How often wld u lyk 2 receive SMS alerts</label>
        <picklist>
            <picklistValues>
                <fullName>Once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every after 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_old_are_most_of_the_coffee_trees__c</fullName>
        <inlineHelpText>How old are most of the coffee trees in your plantations</inlineHelpText>
        <label>How old are most of the coffee trees</label>
        <picklist>
            <picklistValues>
                <fullName>0-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 30 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_seedlings_prepared_before_transplant__c</fullName>
        <description>How do you prepare for seedlings before transplanting?</description>
        <inlineHelpText>How do you prepare for seedlings before transplanting?</inlineHelpText>
        <label>How seedlings prepared before transplant</label>
        <picklist>
            <picklistValues>
                <fullName>Gradually reduce shed a month to transplanting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Put seedlings in direct sun light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just transplant or sell off the seedlings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_u_ensure_2_get_quality_agrochemicals__c</fullName>
        <label>How u ensure 2 get quality agrochemicals</label>
        <picklist>
            <picklistValues>
                <fullName>Buy from registered input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just buy from any input dealer (Do not mind where I Buy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek for guidance from fellow farmers/CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I call the GF farmer call center for guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use any of these inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_is_Ag_extension_info_eg_NAADs__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Agriculture extension agents like from NAADs, NARO, UCDA etc.</inlineHelpText>
        <label>How useful is Ag extension info eg NAADs</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_is_farmer_grps_or_Assctn_info__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Farmer Group or Association?</inlineHelpText>
        <label>How useful is farmer grps or Assctn info</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_is_farming_info_u_get_4m_CKWs__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <label>How useful is farming info u get 4m CKWs</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_z_SMS_subscriptn_farmng_info__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from SMS subscription service/ mobile phone?</inlineHelpText>
        <label>How useful z SMS subscriptn farmng info</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_z_farming_info_4m_traders__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Buyers/Traders?</inlineHelpText>
        <label>How useful z farming info 4m traders</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_z_farming_info_u_gt_4m_radios__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <label>How useful z farming info u gt 4m radios</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_z_farmng_info_4m_GF_callcenta__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the GF farmer call center</inlineHelpText>
        <label>How useful z farmng info 4m GF callcenta</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_z_the_farming_info_u_gt_4m_TV__c</fullName>
        <description>Using a scale from very useful to not at all useful</description>
        <label>How useful z the farming info u gt 4m TV</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hw_often_did_HHold_lack_food_last_4weeks__c</fullName>
        <description>(IF Yes) How often did Household lack food in the last 4 weeks/30 days)</description>
        <inlineHelpText>(IF Yes) How often did Household lack food in the last 4 weeks/30 days)</inlineHelpText>
        <label>Hw often did HHold lack food last 4weeks</label>
        <picklist>
            <picklistValues>
                <fullName>Rarely (1-2 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes (3-10 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often (more than 10 times)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_given_for_free_from_who_or_which_org__c</fullName>
        <description>If given for free, from who or which organisation</description>
        <inlineHelpText>If given for free, from who or which organisation</inlineHelpText>
        <label>If given for free from who or which org</label>
        <picklist>
            <picklistValues>
                <fullName>From NGOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer group or association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government agencies (UCDA, NAADs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_got_on_credit_from_who_or_which_org__c</fullName>
        <label>If got on credit from who or which org</label>
        <picklist>
            <picklistValues>
                <fullName>Contract farming (for a coffee company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agro-input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Village saving and Loan Association (VSLA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_which_food_reserves_do_you_have__c</fullName>
        <description>If yes, which reserves do you have</description>
        <label>If yes which food reserves do you have</label>
        <picklist>
            <picklistValues>
                <fullName>Food in store or crib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food in the garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Nursery_Fenced_Off__c</fullName>
        <label>Is Nursery Fenced Off?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Shade_Well_Maintained__c</fullName>
        <label>Is Shade Well Maintained?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keeps_Records_of_Nursery_Mgt_Activities__c</fullName>
        <description>Do you keep records of the nursery management activities</description>
        <inlineHelpText>Do you keep records of the nursery management activities</inlineHelpText>
        <label>Keeps Records of Nursery Mgt Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kgs_got_in_the_main_harvesting_season__c</fullName>
        <description>Coffee produced in the main harvesting season of 2013</description>
        <inlineHelpText>How many Kgs of coffee did you produce in the main harvesting season of 2013, that is from September to December 2013)</inlineHelpText>
        <label>Kgs got in the main harvesting season</label>
        <picklist>
            <picklistValues>
                <fullName>less than 50Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-200Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-300Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-500 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 500 Kgs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kgs_of_coffee_in_the_most_recent_season__c</fullName>
        <description>Kgs of coffee produced in the most recent season</description>
        <inlineHelpText>How many Kgs of coffee did you produce in the most recent season (February to August 2014)</inlineHelpText>
        <label>Kgs of coffee in the most recent season</label>
        <picklist>
            <picklistValues>
                <fullName>less than 50Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-200Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-300Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-500 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 500 Kgs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kind_of_records_kept_on_coffee__c</fullName>
        <label>Kind of records kept on coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Production records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm planning records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Level_to_stump_the_whole_tree_bush_back__c</fullName>
        <description>level should the whole tree bush be stumped back</description>
        <label>Level to stump the whole tree bush back</label>
        <picklist>
            <picklistValues>
                <fullName>1ft above ground level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below the knee height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-1½ft. above soil level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 ft. above ground level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likihood_2_practice_info_given_on_coffee__c</fullName>
        <description>What is the likelihood</description>
        <inlineHelpText>What is the likelihood that if we provide you with the necessary information and or training on selected  practices that you are lacking in coffee production and marketing that you will put them into practice to improve your coffee yields and income</inlineHelpText>
        <label>Likihood 2 practice info given on coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lyk_2_get_SMS_alerts_on_selectd_practces__c</fullName>
        <description>Would you like to received free SMS alerts on the selected practices such as market prices and farming tips</description>
        <inlineHelpText>Would you like to received free SMS alerts on the selected practices such as market prices and farming tips</inlineHelpText>
        <label>Lyk 2 get SMS alerts on selectd practces</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manure_applied_per_tree__c</fullName>
        <label>Manure applied per tree</label>
        <picklist>
            <picklistValues>
                <fullName>One basin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 basins</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_certified_or_standard_coffee__c</fullName>
        <label>Marketing certified or standard coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_for_Potting_Coffee_Seedlings__c</fullName>
        <description>What did you use for potting coffee seedlings?</description>
        <inlineHelpText>What did you use for potting coffee seedlings?</inlineHelpText>
        <label>Material for Potting Coffee Seedlings</label>
        <picklist>
            <picklistValues>
                <fullName>Polythene pots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana fibers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bamboo poles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tins/plastic containers with holes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_for_Shading_Seedlings__c</fullName>
        <description>What did you use for shading the seedlings?</description>
        <inlineHelpText>What did you use for shading the seedlings?</inlineHelpText>
        <label>Material for Shading Seedlings</label>
        <picklist>
            <picklistValues>
                <fullName>Iron sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry grass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polythene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shade net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana leaves /fibers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planted shade trees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Materials_and_Equipment_used_on_nursery__c</fullName>
        <description>What kind of materials equipment do you have or use on your nursery? Select all that apply</description>
        <inlineHelpText>What kind of materials equipment do you have or use on your nursery? Select all that apply</inlineHelpText>
        <label>Materials and Equipment used on nursery</label>
        <picklist>
            <picklistValues>
                <fullName>Hand hoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spades or shovel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheel barrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watering cans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lake sand/Manure/Chemical fertilizers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pesticides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water hose (rubber pipe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measuring tape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ropes or stings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Measurement_used_when_mixing_berbicides__c</fullName>
        <label>Measurement used when mixing berbicides</label>
        <picklist>
            <picklistValues>
                <fullName>150ml in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_coffee_processing_used__c</fullName>
        <label>Method of coffee processing used</label>
        <picklist>
            <picklistValues>
                <fullName>Dry processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washed wet processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mgt_business_actions_taken_last_2yrs__c</fullName>
        <inlineHelpText>Which of the following management and business actions have you taken in the last 2 years</inlineHelpText>
        <label>Mgt &amp; business actions taken last 2yrs</label>
        <picklist>
            <picklistValues>
                <fullName>Opened savings account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received a credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formed a group/ cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joined a cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grouped sale of products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grouped purchase of inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of these</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mgt_business_practices_hv_u_engaged_in__c</fullName>
        <description>management and business practices have you engaged in over the past 2 years</description>
        <inlineHelpText>management and business practices have you engaged in over the past 2 years</inlineHelpText>
        <label>Mgt &amp; business practices hv u engaged in</label>
        <picklist>
            <picklistValues>
                <fullName>Planning with the cropping calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement of farm size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption of new crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of improved seeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recording money in – money out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replanting of coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>More_than_half_coffee_planted_in_rows__c</fullName>
        <inlineHelpText>Of all the coffee trees on your farm, are more than half of the coffee trees planted in rows</inlineHelpText>
        <label>More than half coffee planted in rows</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_o_the_group_association_cooperative__c</fullName>
        <label>Name o the group/association/cooperative</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_coffee_planted_in_last_12_months__c</fullName>
        <inlineHelpText>In the last 12 months, have you planted any new coffee trees on any of your farm</inlineHelpText>
        <label>New coffee planted in last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>